syntax = "proto3";

package calculator;

option go_package = "github.com/learn_go_grpc/calculator/proto";

message SumRequest {
  int64 number = 1;
  int64 number_1 = 2;
}

message SumResponse {
  int64 result = 1;
}